# chexpert

./: LICENSE
SeaTac_Engine/: CMakeLists.txt  ChessGame.cpp  ChessGame.h  ChessPlayer.cpp  ChessPlayer.h  GameState.cpp  GameState.h  HumanPlayer.cpp  HumanPlayer.h  SeaChessUtils.cpp  SeaChessUtils.h  SeaEngine.cpp  SeaEngine.h  SeaTac_Engine.cpp  SeaTac_Engine.h  bitboard.cpp  bitboard.h  main.cpp
